Images/apps to apps.gif

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </div>
 <div id="d3">
 
-<img src="images/apps.gif" alt="">
+<img src="apps.gif" alt="">
 <h1>Lorem ipsum, dolor sit amet consectetur </h1> 
 <p class="hero">  adipisicing elit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi eius illo laboriosam aspernatur consequatur aliquid voluptas nesciunt perferendis aliquam. Corporis officia voluptatibus veritatis laboriosam, laborum vel hic nisi fugit velit aspernatur, exercitationem amet odit? Amet quae dolores, iusto quos dolorem quia autem esse ea et magnam, magni ab, officiis rem! Eum reprehenderit autem incidunt blanditiis ipsam! Beatae aut repudiandae in accusantium ratione quasi consequuntur hic sed quod quos corporis deleniti atque esse fuga dolorem tempore vel quia provident commodi, recusandae iste illum quisquam! Qui, quaerat non. Odit illo, earum assumenda accusantium iure, debitis voluptatem optio sit, reprehenderit eum accusamus facere! Soluta iure facere voluptates, illo nesciunt possimus consequuntur delectus corrupti debitis illum repellendus maxime minima dolorem voluptatem tenetur? Alias ex dolore quibusdam.</p>
 
